[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/uiScripts/changeSceneButton.gd" type="Script" id=1]
[ext_resource path="res://scenes/uiScenes/buttonSfx.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/sounds/sfx/uiSfx/uiHoverButtons.wav" type="AudioStream" id=3]

[node name="changeSceneButton" type="Button"]
margin_right = 652.0
margin_bottom = 135.0
size_flags_vertical = 3
text = "Start"
script = ExtResource( 1 )

[node name="buttonSfx" parent="." instance=ExtResource( 2 )]

[node name="hoverSfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "ui"

[connection signal="button_up" from="." to="." method="_on_button_up"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
